# Prompt-Eng.-and-Vector-Embeddings-Demo

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
embeddings/: .gitignore  ARCHITECTURE.md  COMPARISON_GUIDE.md  README.md  app.py  sample_data.py  utils.py
prompt_engineering/: .gitignore  README.md  app.py
