[project]
name = "prompt-eng-and-vector-embeddings-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.7.4",
    "langchain>=0.0.335",
    "langchain-community>=0.0.10",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-text-splitters>=0.0.1",
    "numpy>=1.24.3",
    "openai>=1.30.0",
    "pandas>=2.0.3",
    "plotly>=5.17.0",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.0.0",
    "scikit-learn>=1.3.0",
    "streamlit>=1.31.0",
    "tiktoken>=0.5.1",
]
